fix Logo is invisible in high contrast mode
Inline the svg of the logo so it can inherit the current color in high
contrast mode.

--- a/app/assets/stylesheets/application-high.css
+++ b/app/assets/stylesheets/application-high.css
@@ -12,7 +12,3 @@
 	content: "\25b2";
 	color: var(--color-fg-accent);
 }
-
-#logo {
-	background-color: var(--color-fg) !important;
-}
